replaced patreon icon with png (dark mode fix)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ a:hover {
   text-transform: uppercase;
 }
 /* Logo */
-#header img {
+#header .main-logo img {
   padding: 0;
   margin: 0;
   position: relative;
@@ -101,7 +101,7 @@ a:hover {
 }
 
 @media (min-width: 1024px) {
-  #header img {
+  #header .main-logo img {
     /* left: 70%; */
     top: 20%;
     width: 150%;
@@ -114,7 +114,7 @@ a:hover {
   }
 }
 
-#header img:hover {
+#header .main-logo img:hover {
   animation: rotation 1s infinite linear;
   opacity: 1;
 }
@@ -155,6 +155,11 @@ a:hover {
 /* General Social Links Hover color (to add custom for each) */
 #header .social-links a:hover {
   background: #d24318;
+}
+
+/* Patreon custom size because icofont didn't I had to use png (no icofont) */
+.social-links .patreon img {
+  width: 50%;
 }
 
 @media (max-width: 992px) {
@@ -608,7 +613,7 @@ section .container {
     text-align: center;
     padding: 10px;
   }
-  #header img {
+  #header .main-logo img {
     position: relative;
     left: 0;
     top: 0;
@@ -654,7 +659,7 @@ section .container {
   }
 }
 @media (max-width: 768px) {
-  #header img {
+  #header .main-logo img {
     width: 40%;
   }
 }
